src/test/deca/syntax/invalid/class/method/missing_comma_between_parameters_11.deca
// Description:
//    Tests a syntactically incorrect program for a method declaration missing a comma between parameters
//
// Results:
//    Line 11 : Error, expected ',' between parameters.
//
// History:
//    created on 07/01/2025

class TestClass {
    void methodName(int a int b) {
        int c = 10;
    }
}